--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt]{article}
 \usepackage{neurostyle, amssymb,graphicx,amsmath, caption, subcaption}
+\usepackage{hyperref}
 
 \graphicspath{ {./images/} }
 
@@ -41,5 +42,11 @@ sections of neurons, we could pinpoint differences in different kinds of neurons
 In doing so, we may gain an important insight into the actual local structure of different kinds of neurons, and thus, a better
 idea of what structurally differentiates function within different kinds of neurons. We are excited by the possibilities that this project may have in both improving the actual categorization of neurons in terms of space complexity,
 as well as structurally pinpointing the active sections within neurons which may potentially determine functionality in specific cases. 
+
+\section*{Works cited}
+\href{hess.pdf}{\textit{A Topological Representation of Branching Neuronal Morphologies}, Hess et al.}
+
+\href{cccg20.pdf}{\textit{If You Must Choose Among Your Children, Pick the Right One}, Fasy, Holmgren et al.}
+
 
 \end{document}
