--- a/proposal/neurostyle.sty
+++ b/proposal/neurostyle.sty
@@ -8,6 +8,8 @@
 \usepackage{color}
 \newcommand{\todo}[1]{{\color{red}[[\textbf{XXX TODO: }#1]]}}
 
+\linespread{1.5}
+
 %opening
 \title{Extending Discrete Morse Theory to Neuron Reconstruction}
 \author{Ben Holmgren, Ryan Hansen}
